--- a/notas/algebra1.tex
+++ b/notas/algebra1.tex
@@ -578,7 +578,7 @@ is acyclic, so that $H_n(T F)=0$ for $n>0$ and $H_0(T F)=T M$. Thus we can regar
 \section{Spectral Sequences}
 
 
-\section{Abelian categories}
+\section{Abelian categories}-+-
 
 \section{Derived functors}
 
