--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -148,3 +148,19 @@
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
 }
+
+@book{weibelKbookIntroductionAlgebraic2013a,
+  title = {The {{K-book}}: An Introduction to Algebraic {{K-theory}}},
+  shorttitle = {The {{K-book}}},
+  author = {Weibel, Charles A.},
+  date = {2013},
+  series = {Graduate Studies in Mathematics},
+  number = {volume 145},
+  publisher = {American Mathematical Society},
+  location = {Providence, Rhode Island},
+  isbn = {978-0-8218-9132-2},
+  langid = {english},
+  pagetotal = {618},
+  keywords = {$K$-theory -- General reference works (handbooks dictionaries bibliographies etc.),$K$-theory -- Instructional exposition (textbooks tutorial papers etc.),K-theory},
+  file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
+}
