--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -1,16 +1,17 @@
-\documentclass{book}
+\documentclass{report}
 % Packages
 \usepackage[english]{babel}
-\usepackage{fouriernc}
+\usepackage{palatino}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{biblatex} 
+\usepackage{geometry}
+\geometry{margin=1.5in}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{extarrows}
 \usepackage{csquotes}
 \usepackage{tikz-cd}
 \usepackage{hyperref}
-\usepackage[margin=3cm]{geometry}
 \newtheorem{theo}{Theorem}
 \newtheorem{prop}{Proposition}
 \newtheorem{defi}{Definition}
