--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -1,7 +1,7 @@
 \documentclass{report}
 % Packages
 \usepackage[english]{babel}
-\usepackage{palatino}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{biblatex} 
@@ -10,7 +10,7 @@
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{extarrows}
 \usepackage{csquotes}
-\usepackage{tikz-cd}
+\usepackage{pgf,tikz,tikz-cd}
 \usepackage{hyperref}
 \newtheorem{theo}{Theorem}
 \newtheorem{prop}{Proposition}
